--- a/server/dev.html
+++ b/server/dev.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Scrum Board</title>
         <meta content="width=device-width, initial-state=1" name="viewport" />
+        <link href="/favicon.ico" rel="icon" type="image/x-icon" />
     </head>
     <body>
         <div id="app"></div>
